--- a/ui/package.json
+++ b/ui/package.json
@@ -1,55 +1,51 @@
 {
-  "name": "clear_project",
+  "name": "rep-boilerplate",
   "version": "0.1.0",
+  "homepage": "web/build",
   "private": true,
-  "homepage": ".",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.16.5",
-    "@testing-library/react": "^13.4.0",
-    "@testing-library/user-event": "^13.5.0",
-    "@types/jest": "^27.5.2",
-    "@types/node": "^16.18.6",
-    "@types/react": "^18.0.26",
-    "@types/react-dom": "^18.0.9",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mantine/core": "^7.1.2",
+    "@mantine/hooks": "^7.1.2",
+    "@mui/material": "^5.14.13",
+    "@tabler/icons-react": "^2.25.0",
+    "@vitejs/plugin-react": "^3.0.1",
     "classnames": "^2.3.2",
+    "dayjs": "^1.11.7",
+    "framer-motion": "^8.0.2",
+    "prettier": "^2.7.1",
     "gh-pages": "^6.1.1",
-    "rage-rpc": "^0.4.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-scripts": "5.0.1",
-    "sass": "^1.56.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.41.3",
     "typescript": "^4.9.4",
+    "sass": "^1.56.1",
+    "vite": "^4.0.4",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "react-app-rewired start",
-    "build": "react-app-rewired build",
-    "test": "react-app-rewired test",
-    "eject": "react-app-rewired eject",
-    "deploy": "gh-pages -d dist"
-  },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
+    "start": "vite",
+    "start:game": "vite build --watch",
+    "build": "tsc && vite build",
+    "preview": "vite preview"
   },
   "devDependencies": {
-    "mobx": "^6.7.0",
-    "mobx-react-lite": "^3.4.0",
-    "react-app-rewire-alias": "^1.1.7",
-    "react-app-rewired": "^2.2.1"
-  }
+    "@babel/core": ">=7.0.0 <8.0.0",
+    "@babel/plugin-syntax-flow": "^7.14.5",
+    "@babel/plugin-transform-react-jsx": "^7.14.9",
+    "@types/node": "^16.11.26",
+    "@types/react": "^18.0.24",
+    "@types/react-dom": "^18.0.8",
+    "autoprefixer": "^10.0.2",
+    "cross-env": "^7.0.3",
+    "csstype": "^3.0.10",
+    "postcss": "^8.4.21",
+    "postcss-preset-mantine": "^1.8.0",
+    "postcss-simple-vars": "^7.0.1",
+    "prop-types": "^15.8.1",
+    "rimraf": "^3.0.2",
+    "tailwindcss": "^3.3.3"
+  },
+  "pnpm": {}
 }
